--- a/bootstrap/default.properties
+++ b/bootstrap/default.properties
@@ -8,13 +8,17 @@
 # latest installer file version without extension
 # installer=cc-def-10.5-fix4-${platform}
 # installer.url=http://empowersdc.softwareag.com/ccinstallers
+installer=cc-def-10.5-fix4-${platform}
+installer.url=http://empowersdc.softwareag.com/ccinstallers
 
 # where you placed downloaded installers
 # installer.dir=${user.home}/Downloads
+installer.dir=${user.home}/Downloads
 
 # where to install
 # Use forward slashes for Windows, e.g. C:/SoftwareAG
-install.dir=${user.home}/sag/cc
+#install.dir=${user.home}/sag/cc
+install.dir=C:/sagcc
 
 # customize ports
 # cce.http.port=8090
@@ -22,6 +26,12 @@ install.dir=${user.home}/sag/cc
 # spm.http.port=8092
 # spm.https.port=8093
 
+cce.http.port=8090
+cce.https.port=8091
+spm.http.port=8092
+spm.https.port=8093
+
 # customize Administrator password
 # password=manage
 # test for tracking remote changes/merge
+password=manage
