--- a/bootstrap/default.properties
+++ b/bootstrap/default.properties
@@ -3,13 +3,13 @@
 ##
 
 ### YOU MUST UNCOMMENT THIS LINE TO ACCEPT EULA
-#accept.license=true
+accept.license=true
 
 # latest installer file version without extension
 # installer=cc-def-10.5-fix4-${platform}
 # installer.url=http://empowersdc.softwareag.com/ccinstallers
 installer=cc-def-10.5-fix4-${platform}
-installer.url=http://empowersdc.softwareag.com/ccinstallers
+installer.url=https://empowersdc.softwareag.com/ccinstallers
 
 # where you placed downloaded installers
 # installer.dir=${user.home}/Downloads
@@ -18,7 +18,7 @@ installer.dir=${user.home}/Downloads
 # where to install
 # Use forward slashes for Windows, e.g. C:/SoftwareAG
 #install.dir=${user.home}/sag/cc
-install.dir=C:/sagcc
+#install.dir=C:/sagcc
 
 # customize ports
 # cce.http.port=8090
