--- a/bootstrap/default.properties
+++ b/bootstrap/default.properties
@@ -8,7 +8,7 @@ accept.license=true
 # latest installer file version without extension
 # installer=cc-def-10.5-fix4-${platform}
 # installer.url=http://empowersdc.softwareag.com/ccinstallers
-installer=cc-def-10.5-fix4-${platform}
+installer=cc-def-10.5-latest-${platform}
 installer.url=https://empowersdc.softwareag.com/ccinstallers
 
 # where you placed downloaded installers
